fix overflow for long recommending names

--- a/app/assets/stylesheets/profile.sass
+++ b/app/assets/stylesheets/profile.sass
@@ -29,6 +29,10 @@
   position: absolute
   top: 1.2em
   font-weight: 600
+  width: 80%
+  white-space: nowrap
+  text-overflow: ellipsis
+  overflow: hidden
 
 =ico
   display: inline-block
